--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -329,15 +329,15 @@ input.ability {
         margin-left: 27%; /* 3/12 + offset */
         min-height: 400px;
     }
-    #sidebarmenu aside {
-        position: fixed;
-    }
 }
 
 @media only screen and (max-width: 979px) {
     /* Style adjustments for viewports that meet the condition */
     body {
         padding-top: 0;
+    }
+    .navbar-fixed-top, .affix {
+        position: relative;
     }
 }
 
